# sao-converter

./: .gitignore  README.md  pyproject.toml  sao_converter.py  sao_quickstart.md
example/jaffle_shop/: dbt_project.yml
example/jaffle_shop/models/marts/: customers.yml  order_items.yml  orders.yml
example/jaffle_shop/models/staging/: stg_customers.yml  stg_locations.yml  stg_order_items.yml  stg_orders.yml  stg_products.yml  stg_supplies.yml
terraform/: .gitignore  generated.tf  main.tf  setup.sh
tests/: test_sao_converter.py
